# serde_geozero

./: .mise.toml  Cargo.toml  README.md  mise.toml
.github/: dependabot.yml
src/: collector.rs  de.rs  error.rs  lib.rs  ser.rs
