[package]
name = "serde_geozero"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
geo = { version = "0.29.3", features = ["use-serde"] }
geozero = { version = "0.14.0", default-features = false, features = [
  "with-geo",
] }
serde = "1.0.216"
serde-hjson = "1.1.0"
serde_json = "1.0.133"
serde_with = "3.11.0"
thiserror = "2.0.6"

[dev-dependencies]
approx = "0.5.1"
flatgeobuf = "4.5.0"
geozero = { version = "0.14.0", features = ["with-geojson"] }

[lints.clippy]
pedantic = "deny"
