[package]
name = "serde_geozero"
description = "A Rust library for serializing and deserializing geospatial data using serde and geozero."
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/awmath/serde_geozero"
repository = "https://github.com/awmath/serde_geozero"
readme = "README.md"

[dependencies]
anyhow = "1.0.94"
geo = { version = "0.29.3", features = ["use-serde"] }
geozero = { version = "0.14.0", default-features = false, features = [
  "with-geo",
] }
hashbrown = { version = "0.15.2", features = ["serde"] }
serde = "1.0.216"
serde_json = "1.0.133"
thiserror = "2.0.6"

[dev-dependencies]
approx = "0.5.1"
flatgeobuf = "4.5.0"
geozero = { version = "0.14.0", features = ["with-geojson"] }

[lints.clippy]
pedantic = "deny"
