[package]
name = "serde_geozero"
description = "A Rust library for serializing and deserializing geospatial data using serde and geozero."
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/awmath/serde_geozero"
repository = "https://github.com/awmath/serde_geozero"
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
geo = { version = "0.32.0", features = ["serde"] }
geozero = { version = "0.15.1", default-features = false, features = [
  "with-geo",
] }
hashbrown = { version = "0.16.1", features = ["serde"] }
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"

[dev-dependencies]
approx = "0.5.1"
flatgeobuf = "6.0.1"
geozero = { version = "0.15.1", features = ["with-geojson"] }

[lints.clippy]
pedantic = "deny"
